examples/invalid/08_FFI_UnknownSymbol.lune
module FFI_UnknownSymbol exposing (main)

import Lune.IO as IO
import Lune.Task as Task

foreign import ccall "unknown_function" unknownFunc : String -> IO Int

main : Task Unit Unit
main =
  do
    _ <- Task.fromIO (unknownFunc "test")
    IO.println "Should not reach here"
